update notes on vscode

--- a/scripts_nbs/foobar.ipynb
+++ b/scripts_nbs/foobar.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Some Jupyther foobar\n",
+    "# Some Jupyter foobar\n",
     "\n",
     "This notebook explores some of the features of jupyter notebook.\n",
     "\n",
@@ -15,9 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "text": "\u001b[0;31mDocstring:\u001b[0m\n::\n\n  %shebang [--no-raise-error] [--proc PROC] [--bg] [--err ERR] [--out OUT]\n\nRun a cell via a shell command\n\nThe `%%script` line is like the #! line of script,\nspecifying a program (bash, perl, ruby, etc.) with which to run.\n\nThe rest of the cell is run by that program.\n\nExamples\n--------\n::\n\n    In [1]: %%script bash\n       ...: for i in 1 2 3; do\n       ...:   echo $i\n       ...: done\n    1\n    2\n    3\n\noptional arguments:\n  --no-raise-error  Whether you should raise an error message in addition to a\n                    stream on stderr if you get a nonzero exit code.\n  --proc PROC       The variable in which to store Popen instance. This is\n                    used only when --bg option is given.\n  --bg              Whether to run the script in the background. If given, the\n                    only way to see the output of the command is with\n                    --out/err.\n  --err ERR         The variable in which to store stderr from the script. If\n                    the script is backgrounded, this will be the stderr\n                    *pipe*, instead of the stderr text itself and will not be\n                    autoclosed.\n  --out OUT         The variable in which to store stdout from the script. If\n                    the script is backgrounded, this will be the stdout\n                    *pipe*, instead of the stderr text itself and will not be\n                    auto closed.\n\u001b[0;31mFile:\u001b[0m      ~/.pyenv/versions/my_382/lib/python3.8/site-packages/IPython/core/magics/script.py\n"
+    }
+   ],
    "source": [
     "?%%script"
    ]
@@ -57,20 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Hello Jupyter. This is a python module ;)\n"
+    }
+   ],
    "source": [
     "%run ./foobar_script.py \"Jupyter\"\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
